# Structura

./: README.md  app.py  gradio_gui.py  main.py  pyproject.toml
