[project]
name = "structura"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "certifi>=2025.1.31",
    "cffi>=1.17.1",
    "charset-normalizer>=3.4.1",
    "gradio>=5.24.0",
    "idna>=3.10",
    "nbtlib>=2.0.4",
    "numpy>=2.2.4",
    "packaging>=24.2",
    "pillow>=11.1.0",
    "platformdirs>=4.3.7",
    "pooch>=1.8.2",
    "pycparser>=2.22",
    "pynacl>=1.5.0",
    "requests>=2.32.3",
    "ujson>=5.10.0",
    "urllib3>=2.4.0",
]
